# kosta

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json
ETH-data/: .gitignore  README.md  docker-compose.yml  package.json
ETH-data/pipelines/: pyproject.toml
ETH-data/pipelines/crawl/: __init__.py  core.py  load.py  models.py  source_loader.py  utils.py
ETH-data/pipelines/crawl/jobs/: collect.py  submit_all.py
ETH-data/pipelines/crawl/parsers/: blockmedia_parser.py  coindesk_parser.py  cointelegraph_parser.py  common.py  tokenpost_parser.py
ETH-data/pipelines/crawl/sources/: blockmedia.yaml  coindesk.yaml  cointelegraph.yaml  fear_greed.yaml  tokenpost.yaml
ETH-data/pipelines/crawl/tests/: test_utils.py
ETH-data/pipelines/pipelines/: __init__.py  config.py  db.py  run_all.py
ETH-data/pipelines/pipelines/ingest/: __init__.py  cex_flow_loader.py  column_mappings.py  common.py  inspect_raw.py  price_loader.py  whale_csv_loader.py
ETH-data/pipelines/pipelines/load/: __init__.py  cex_flows.py  common.py  event_windows.py  events.py  prices.py  reconcile.py  whale_transfers.py
ETH-data/pipelines/pipelines/transform/: __init__.py  cex_direction.py  event_windows.py  validators.py  whale_transfers.py
ETH-data/pipelines/tests/: test_event_windows.py  test_ingest.py  test_reconcile.py
SyncSpace/: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  tsconfig.json  vercel.json  vite.config.ts
ajax/: PRESENTATION.md  QNA.md
docs/: DATA_PROCESSING_ANALYSIS_KO.md  DATA_SCHEMA.md  (+4 more)
(+173 files in other folders)
