[project]
name = "whales-move-pipelines"
version = "0.1.0"
description = "Data ingestion, transformation, and load pipeline for When Whales Move"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
]

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
packages = ["pipelines"]

[tool.pytest.ini_options]
pythonpath = [".", ".."]
testpaths = ["tests"]
